# UserDefinedPhraser

./: .gitignore  LICENSE  README-CN.md  README.md  UDP-Arrows.json  UDP-Japanese.json  UDP-Keyboards.json  UDP-Numbers.json  UDP-Symbols.json  UDPParser.py  pyproject.toml  requirements.txt  run_parser.py  run_phraser.py  user_defined_phraser.py
Phrasers/: htmlphraser.py  jsonphraser.py  macphraser.py  msphraser.py  phraser.py  txtphraser.py
Phrases/: UDP-Arrows.json  UDP-Emojis.json  UDP-Greek.json  UDP-Japanese_hiragana.json  UDP-Japanese_katakana.json  UDP-Letters-EN.json  UDP-Letters-Greek.json  UDP-Maths.json  UDP-Numbers.json  UDP-Symbols.json
UDPTools/: htmluserphraser.html  htmluserphraser.py  jsonuserphraser.py  macuserphraser.py  msuserphraser.py  txtuserphraser.py
classes/: htmlphraser.py  jsonphraser.py  macphraser.py  msphraser.py  phraser.py  txtphraser.py
phrasers/: htmlphraser.py  htmlphraser_tpl.html  jsonphraser.py  msphraser.py  phraser.py  tomlphraser.py  txtphraser.py
phrases/: UDP-Arrows.toml  UDP-Emojis.toml  UDP-Keyboards.toml  UDP-Letters-EN.toml  UDP-Letters-Greek.toml  UDP-Letters-JA-hiragana.toml  UDP-Letters-JA-katakana.toml  UDP-Letters-KR.toml  UDP-Maths.toml  UDP-Symbols.toml
