[tool.poetry]
name = "userdefinedphraser"
version = "1.0.0"
description = "Convert pre-defined User Defined Phrases(UDP) to supported format"
authors = ["Kyan <ykyankai@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
bs4 = "latest"
lxml = "latest"
consoleiotools = "latest"
consolecmdtools = "latest"

[tool.poetry.dev-dependencies]
pycodestyle = "latest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
