[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "UserDefinedPhraser"
readme = "README.md"
dynamic = ["version"]
description = "Convert pre-defined User Defined Phrases (UDP) to supported format"
requires-python = ">=3.6"
keywords = ["User", "Defined", "Phrases"]
license = { file = "LICENSE" }  # 使用文件作为 LICENSE
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["beautifulsoup4", "lxml", "consoleiotools", "consolecmdtools"]  # 依赖的第三方 package


[[project.authors]]  # 追加作者
name = "Kyan"
email = "kai@kyan001.com"


[project.optional-dependencies]
dev = ["pycodestyle"]  # pip install "expackage[dev]" 时安装


[project.urls]
homepage = "https://github.com/kyan001/UserDefinedPhraser"  # 主页
documentation = "https://github.com/kyan001/UserDefinedPhraser/blob/master/README.md"  # 文档
"Issue Tracker" = "https://github.com/kyan001/UserDefinedPhraser/issues"  # BUG 提交
"Source Code" = "https://github.com/kyan001/UserDefinedPhraser"  # 代码

[tool.setuptools.dynamic]
version = {attr = "user_defined_phraser.__version__"}

[tool.setuptools]
py-modules = ["user_defined_phraser"]
